@@ -499,6 +499,12 @@ Channel.prototype.saveRank = function (user, callback) {
     this.server.db.setChannelRank(this.name, user.name, user.rank, callback);
 }
 
+Channel.prototype.saveInitialRank = function (user, callback) {
+    if(!this.registered)
+        return;
+    this.server.db.insertChannelRank(this.name, user.name, user.rank, callback);
+};
+
 Channel.prototype.getIPRank = function (ip, callback) {
     var self = this;
     self.server.db.listAliases(ip, function (err, names) {
@@ -1100,7 +1106,7 @@ Channel.prototype.broadcastNewUser = function(user) {
         });
 
         if(user.rank > 0) {
-            self.saveRank(user);
+            self.saveInitialRank(user);
         }
 
         var msg = user.name + " joined (aliases: ";
