@@ -557,6 +557,23 @@ Database.prototype.setChannelRank = function (channame, name, rank, callback) {
     self.query(query, [name, rank, rank], callback);
 };
 
+Database.prototype.insertChannelRank = function (channame, name, rank, callback) {
+    var self = this;
+    if(typeof callback !== "function")
+        callback = blackHole;
+
+    if(!$util.isValidChannelName(channame)) {
+        callback("Invalid channel name", null);
+        return;
+    }
+
+    var query = "INSERT INTO `chan_" + channame + "_ranks` " +
+                "(name, rank) VALUES (?, ?) " +
+                "ON DUPLICATE KEY UPDATE rank=rank";
+
+    self.query(query, [name, rank], callback);
+};
+
 Database.prototype.listChannelRanks = function (channame, callback) {
     var self = this;
     if(typeof callback !== "function")
