@@ -1,3 +1,10 @@
+Mon Oct 14 18:13 2013 CDT
+    * lib/channel.js, lib/database.js: Add a separate database query
+      for saving ranks on login (insert only, do nothing if the name
+      exists).  Should make it actually impossible to ever lose rank
+      when logging in (I thought it was impossible before but someone
+      claimed it happened).
+
 Mon Oct 14 16:37 2013 CDT
     * lib/bgtask.js: Add an interval for dumping all loaded channels
     * lib/channel.js: Remove per-channel dump interval
